examples/good/10_runtime_except.pp
int main() {
    1 / 0; // error
}
